# reim

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  INTEGRATION.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py  middleware.py  schemas.py
docs/: AuditREIM - Governance and AI Judgment Audit.md  Reticular Epistemic Inference Model (REIM).md
infrastructure/: DEPLOYMENT.md  provision.sh
reim/: __init__.py  audit.py  audit_metrics.py  baselines.py  generators.py  hierarchical.py  metrics.py  model.py  multidim.py  online.py
reim/examples/: __init__.py  product_review.py
tests/: test_api.py  test_audit.py  test_middleware.py  test_reim.py
